--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "prettier": "^1.19.1",
     "typescript": "~3.9.3",
-    "vue-jest": "^5.0.0-0"
+    "vue-jest": "^5.0.0-0",
+    "firebase": "^8.4.3"
   }
 }
