--- a/package.json
+++ b/package.json
@@ -6,29 +6,29 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "yarn build && firebase deploy"
   },
   "dependencies": {
+    "@babel/core": "^7.14.0",
     "axios": "^0.21.1",
+    "babel-loader": "^8.2.2",
     "core-js": "^3.11.0",
     "json-server": "^0.16.3",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "webpack": "^4.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.11",
     "@types/jest": "^24.0.19",
-    "@types/mocha": "^5.2.4",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.12",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-plugin-unit-mocha": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
@@ -39,9 +39,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
+    "firebase": "^8.4.3",
     "prettier": "^1.19.1",
-    "typescript": "~3.9.3",
-    "vue-jest": "^5.0.0-0",
-    "firebase": "^8.4.3"
+    "typescript": "~3.9.3"
   }
 }
